# FastFlowWrapper

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  build.sh  docker-compose.yaml  main.py  pyproject.toml  railway.json  railway.toml  requirements.txt
src/: main.py
src/api/v1/: router.py
src/api/v1/services/: chat.py  models.py
src/config/: config.py
src/core/: config.py  logger.py
src/middleware/: auth.py
src/models/: flowise.py  openai.py
src/utils/: helpers.py
