[tool.poetry]
name = "henjii"
version = "0.1.0"
description = "FastAPI wrapper for Flowise"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.115.2"
uvicorn = "0.32.0"
python-dotenv = "1.0.1"
requests = "2.32.3"
aiohttp = "3.9.3"
python-multipart = "0.0.9"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
sse-starlette = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
